--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
     <div class="jumbotron">
       <div class="container">
         <img src="Images/spiritofeq_logo_med.gif" hspace="20" vspace="20" class="pull-right" />
-        <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .</p>
+        <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
+          <br>
+          <span class="btn-success">Spirit of EQ can help with that journey!</span></p>
         <!--<p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
       </div>
   </div>
