--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Spiritual EQ</a>
+          <a class="navbar-brand" href="#">Spirit of EQ</a>
         </div>
         <!--<div class="navbar-collapse collapse">
           <form class="navbar-form navbar-right" role="form">
