--- a/index.html
+++ b/index.html
@@ -40,24 +40,20 @@
           </button>
           <a class="navbar-brand" href="#">Spirit of EQ</a>
         </div>
-        <!--<div class="navbar-collapse collapse">
-          <form class="navbar-form navbar-right" role="form">
-            <div class="form-group">
-              <input type="text" placeholder="Email" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="Password" class="form-control">
-            </div>
-            <button type="submit" class="btn btn-success">Sign in</button>
-          </form>
-        </div>--><!--/.navbar-collapse -->
+        <div class="navbar-collapse collapse navbar-nav navbar-right">
+          <ul class="nav nav-pills">
+  			<li><a href="#home">Home</a></li>
+  			<li><a href="#members">Members</a></li>
+  			<li><a href="#background">Background</a></li>
+		 </ul>
+        </div><!--/.navbar-collapse -->
       </div>
     </div>
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
+    <div class="jumbotron"><a name="home"></a>
       <div class="container">
-        <img src="Images/spiritofeq_logo_med.gif" hspace="20" vspace="20" class="pull-right" />
+        <span class="pull-right"><img src="Images/spiritofeq_logo_med.gif" class="img-responsive" hspace="20" vspace="10" /></span>
         <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
           <br>
           <span class="btn-info">Spirit of EQ can help with that journey!</span></p>
@@ -66,8 +62,45 @@
   </div>
 
     <div class="container">
-      <!-- Example row of columns -->
+    <div class="row">
+        <div class="col-md-12">
+          <a name="members"></a><h2>Members</h2>
+          <p>Here we have a list of Individuals, Teams, Leaders, and Organizations:
+          through a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovat </p>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
       <div class="row">
+        <div class="col-md-12">
+          <a name="background"></a><h2>Background</h2>
+          <p>Jim Vaive<br />
+In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.</p>
+          <p>Due to the company’s expertise and knowledge of the pest management industry, Jim has made appearances on radio and television to talk about how his industry affects your life. Jim’s work with complex jobs and effective problem solving ability has led to the company’s success. His key business focus is coordinating the right people for the most effective outcome. Jim is a member of the Columbus, Ohio and National Pest Control Associations. Among his other accomplishments are the following:            </p>
+          <ol>
+            <li>Has been involved with Karios Prison Ministry for 20 years working with the incarcerated from a spiritual and emotional perspective.</li>
+            <li>Past board member of Karios Ohio</li>
+            <li>Past board member of Karios USA </li>
+            <li>Past board member of RCI/LCI board of directors</li>
+            <li>Has been in many prisons around the country</li>
+            <li>Has been a board member of the Entrepreneurship Institute for 20 years</li>
+            <li>Was a board member of haven of hope</li>
+            <li>Is a certified lay speaker in the Methodist church </li>
+            <li>Has completed Spiritual formation with Spiritual Formation Academy, Upper Room</li>
+            <li>Has competed Spiritual Direction Training and sits with people on a regular basis</li>
+            <li>Has held many leadership positions in the church and business</li>
+            <li>Has been a past member of the board of directors for the National Pest Management Ass.</li>
+            <li>Has led his company to over 20 years of growth</li>
+            <li>Has a passion for running, walking and reading</li>
+            <li>Is certified by “6 Seconds” EQ company and coaches people regularly on their emotional walk/journey </li>
+            <li>Is certified by “Deep Change” Cindy Wigglesworth SQ 21 Profile and coaches people regularly on their spiritual walk/journey</li>
+            <li>Is an elder of Everyday People Ministries, a storefront mission.</li>
+            <li>Has keen insight with regard to what drives people on the journey. </li>
+          </ol>
+          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+      </div>
+      <!-- Example row of columns -->
+      <!--<div class="row">
         <div class="col-md-4">
           <h2>Heading</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
@@ -83,7 +116,7 @@
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-      </div>
+      </div>-->
 
       <hr>
 
