--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Spirit of EQ</a>
+          <a class="navbar-brand" href="#">Spirit of EQ Home</a>
         </div>
         <div class="navbar-collapse collapse navbar-nav navbar-right">
           <ul class="nav nav-pills">
-  			<li><a href="#home">Home</a></li>
   			<li><a href="#members">Members</a></li>
   			<li><a href="#background">Background</a></li>
+            <li><a href="#services">Services</a></li>
 		 </ul>
         </div><!--/.navbar-collapse -->
       </div>
@@ -56,23 +56,24 @@
         <span class="pull-right"><img src="Images/spiritofeq_logo_med.gif" class="img-responsive" hspace="20" vspace="10" /></span>
         <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
           <br>
-          <span class="btn-info">Spirit of EQ can help with that journey!</span></p>
-        <!--<p><a class="btn btn-primary btn-lg" role="button">Learn more &raquo;</a></p>-->
+          <span class="btn-primary">Spirit of EQ can help with that journey!</span></p>
       </div>
   </div>
 
     <div class="container">
     <div class="row">
         <div class="col-md-12">
-          <a name="members"></a><h2>Members</h2>
+          <a name="members"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Members</h2>
           <p>Here we have a list of Individuals, Teams, Leaders, and Organizations:
           through a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovat </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
+          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+          <br /><br />
       </div>
-      <div class="row">
+      </div>
+     <div class="row">
         <div class="col-md-12">
-          <a name="background"></a><h2>Background</h2>
+          <a name="background"></a>
+          <img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Background</h2>
           <p>Jim Vaive<br />
 In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.</p>
           <p>Due to the company’s expertise and knowledge of the pest management industry, Jim has made appearances on radio and television to talk about how his industry affects your life. Jim’s work with complex jobs and effective problem solving ability has led to the company’s success. His key business focus is coordinating the right people for the most effective outcome. Jim is a member of the Columbus, Ohio and National Pest Control Associations. Among his other accomplishments are the following:            </p>
@@ -96,7 +97,20 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
             <li>Is an elder of Everyday People Ministries, a storefront mission.</li>
             <li>Has keen insight with regard to what drives people on the journey. </li>
           </ol>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
+          <br /><br />
+       </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12">
+          <a name="services"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Services</h2>
+          <p>Here we have a list of Individuals, Teams, Leaders, and Organizations:
+          through a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize</p>
+          
+          <p>B2B e-tailers and re-envisioneer innovatthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovative partnerships that evolve dot-com initiatives delivering synergistic earballs to incentivize B2B2C deliverables that leverage</p>
+          
+       <p>magnetic solutions to synergize clicks-and-mortar earballs while facilitating one-to-one action-items with revolutionary relationships that deliver viral markets and grow e-business supply-chains that expedite seamless relationships  and transform back-end relationships withthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovat </p>
+          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
         </div>
       </div>
       <!-- Example row of columns -->
