--- a/index.html
+++ b/index.html
@@ -42,10 +42,22 @@
         </div>
         <div class="navbar-collapse collapse navbar-nav navbar-right">
           <ul class="nav nav-pills">
-  			<li><a href="#members">Members</a></li>
-  			<li><a href="#background">Background</a></li>
-            <li><a href="#services">Services</a></li>
-		 </ul>
+		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Members<span class="caret"></span></a>
+	  		<ul class="dropdown-menu" role="menu">
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Individuals</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Teams/Groups</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Leaders</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Organizations</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">About Us</a></li>
+				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Contact Us</a></li>
+			</ul>
+		</li>
+  		<li><a href="#members">Members</a></li>
+  		<li><a href="#background">Background</a></li>
+		<li><a href="#services">Services</a></li>
+		<li><a href="#history">History</a></li>
+		<li><a href="#resources">Resources</a></li>
+	  </ul>
         </div><!--/.navbar-collapse -->
       </div>
     </div>
