--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
 				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Contact Us</a></li>
 			</ul>
 		</li>
-  		<li><a href="#members">Members</a></li>
   		<li><a href="#background">Background</a></li>
 		<li><a href="#services">Services</a></li>
 		<li><a href="#history">History</a></li>
@@ -65,12 +64,22 @@
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron"><a name="home"></a>
       <div class="container">
+	<div class="row">
+  		<div class="col-md-8">&nbsp;</div>
+  		<div class="col-md-4">
+      			<form class="navbar-form navbar-right" role="search">
+        		<div class="form-group">
+          		<input type="text" class="form-control" placeholder="Search"></div>&nbsp;<button type="submit" class="btn btn-default">Submit</button></form>
+		</div> <!-- close 4 column div -->
+		</div> <!-- close first row containing search form -->
+	<div class="row">
         <span class="pull-right"><img src="Images/spiritofeq_logo_med.gif" class="img-responsive" hspace="20" vspace="10" /></span>
         <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
           <br>
           <span class="btn-primary">Spirit of EQ can help with that journey!</span></p>
-      </div>
-  </div>
+	 </div> <!-- close row -->
+      </div> <!-- close container -->
+  </div> <!-- close jumbotron -->
 
     <div class="container">
     <div class="row">
@@ -109,11 +118,9 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
             <li>Is an elder of Everyday People Ministries, a storefront mission.</li>
             <li>Has keen insight with regard to what drives people on the journey. </li>
           </ol>
-          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
           <br /><br />
-       </div>
-      </div>
-      <div class="row">
+       		</div>
+      	</div>
         <div class="col-md-12">
           <a name="services"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Services</h2>
           <p>Here we have a list of Individuals, Teams, Leaders, and Organizations:
