--- a/index.html
+++ b/index.html
@@ -63,15 +63,7 @@
 
     <!-- Main jumbotron for a primary marketing message or call to action -->
     <div class="jumbotron"><a name="home"></a>
-      <div class="container">
-	<div class="row">
-  		<div class="col-md-8">&nbsp;</div>
-  		<div class="col-md-4">
-      			<form class="navbar-form navbar-right" role="search">
-        		<div class="form-group">
-          		<input type="text" class="form-control" placeholder="Search"></div>&nbsp;<button type="submit" class="btn btn-default">Submit</button></form>
-		</div> <!-- close 4 column div -->
-		</div> <!-- close first row containing search form -->
+      <div class="container"> <!-- search code goes here -->
 	<div class="row">
         <span class="pull-right"><img src="Images/spiritofeq_logo_med.gif" class="img-responsive" hspace="20" vspace="10" /></span>
         <p>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
