Style changes for top text, menu, and EQ logo
Updated text with H2, image logo with drop shadow, made EQ Home shorter.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <title>Spirit of EQ</title>
 
-	<!-- fixed, responsive background image css code -->
+<!-- fixed, responsive background image css code -->
 
 <style type="text/css">
 <!--
@@ -38,16 +38,16 @@ img.bg {
 -->
 </style>
 
-    <!-- Bootstrap core CSS -->
+<!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
+<!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
+<!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
       <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -57,7 +57,7 @@ img.bg {
   </head>
 
   <body>
-	<img src="images/RTN_BG_50.jpg" class="bg" />
+	<img src="images/RTN_BG_40.jpg" class="bg" />
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
         <div class="navbar-header">
@@ -67,7 +67,7 @@ img.bg {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Spirit of EQ Home</a>
+          <a class="navbar-brand" href="#">EQ Home</a>
         </div>
         <div class="navbar-collapse collapse navbar-nav navbar-right">
           <ul class="nav nav-pills">
@@ -92,8 +92,8 @@ img.bg {
     <div class="container">
      <div class="row">
         <div class="col-md-12">
-	<h1>Welcome to the Spirit of EQ!</h1>
-        <span class="pull-right"><img src="Images/spiritofeq_logo_med.gif" class="img-responsive" hspace="20" vspace="10" /></span>
+	<h2>The Spirit of EQ Welcomes You!</h2>
+        <span class="pull-right"><img src="Images/spiritofeq_logo_med3.gif" class="img-responsive" hspace="20" vspace="10" /></span>
         <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
           <br>
           <span class="btn-primary">Spirit of EQ can help with that journey!</span></h3>
