added space below name to get better wrapping

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ img.bg {
         <div class="col-md-12">
           <a name="background"></a>
           <img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Background</h2>
-          <p>Jim Vaive<br />
+          <p>Jim Vaive<br /><br />
 In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.</p>
           <p>Due to the company’s expertise and knowledge of the pest management industry, Jim has made appearances on radio and television to talk about how his industry affects your life. Jim’s work with complex jobs and effective problem solving ability has led to the company’s success. His key business focus is coordinating the right people for the most effective outcome. Jim is a member of the Columbus, Ohio and National Pest Control Associations. Among his other accomplishments are the following:            </p>
           <ol>
