changing the DIV with the text
Added PANEL div and got rid of unnecessary boilerplate at bottom and set
background image to z-index = -1

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ img.bg {
 /* Set rules to fill background */
 	min-height: 100%;
 	min-width: 1024px;
+	z-index: -1;
 
 /* Set up proportionate scaling */
 	width: 100%;
@@ -102,6 +103,8 @@ img.bg {
     </div> <!-- close the container -->
 
     <div class="container">
+	<div class="panel panel-default">
+	<div class="panel-body">
      <div class="row">
         <div class="col-md-12">
           <a name="background"></a>
@@ -130,8 +133,11 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
             <li>Has keen insight with regard to what drives people on the journey. </li>
           </ol>
           <br /><br />
-       		</div>
+       	</div>
+	</div>
+	</div>
       	</div>
+	<div class="row">
         <div class="col-md-12">
           <a name="services"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Services</h2>
           <p>Here we have a list of Individuals, Teams, Leaders, and Organizations:
@@ -141,27 +147,9 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
           
        <p>magnetic solutions to synergize clicks-and-mortar earballs while facilitating one-to-one action-items with revolutionary relationships that deliver viral markets and grow e-business supply-chains that expedite seamless relationships  and transform back-end relationships withthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovat </p>
           <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
-        </div>
-      </div>
-      <!-- Example row of columns -->
-      <!--<div class="row">
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Heading</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-      </div>-->
-
+        </div> <!-- closes the columns  -->
+      </div>  <!-- closes the row -->
+     
       <hr>
 
       <footer>
