changes with Josh
changed nav bar colors

--- a/index.html
+++ b/index.html
@@ -11,39 +11,11 @@
 
     <title>Spirit of EQ</title>
 
-<!-- fixed, responsive background image css code -->
-
-<style type="text/css">
-<!--
-img.bg {
-/* Set rules to fill background */
-	min-height: 100%;
-	min-width: 1024px;
-	z-index: -1;
-
-/* Set up proportionate scaling */
-	width: 100%;
-	height: auto;
-			
-/* Set up positioning */
-	position: fixed;
-	top: 0;
-	left: 0;
-}
-		
-@media screen and (max-width: 1024px){
-	img.bg {
-	left: 50%;
-	margin-left: -512px; }
-}
--->
-</style>
-
 <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
 <!-- Custom styles for this template -->
-    <link href="css/jumbotron.css" rel="stylesheet">
+    <link href="css/site.css" rel="stylesheet">
 
 <!-- Just for debugging purposes. Don't actually copy this line! -->
     <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
@@ -68,10 +40,10 @@ img.bg {
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">EQ Home</a>
+          <a class="navbar-brand" href="#">Spirit of EQ</a>
         </div>
         <div class="navbar-collapse collapse navbar-nav navbar-right">
-          <ul class="nav nav-pills">
+          <ul class="nav navbar-nav">
 		<li class="dropdown"><a class="dropdown-toggle" data-toggle="dropdown" href="#">Members<span class="caret"></span></a>
 	  		<ul class="dropdown-menu" role="menu">
 				<li role="presentation"><a role="menuitem" tabindex="-1" href="#">Individuals</a></li>
@@ -95,15 +67,14 @@ img.bg {
         <div class="col-md-12">
 	<h2>The Spirit of EQ Welcomes You!</h2>
         <span class="pull-right"><img src="Images/spiritofeq_logo_med3.gif" class="img-responsive" hspace="20" vspace="10" /></span>
-        <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .<br>
-          <br>
-          <span class="btn-primary">Spirit of EQ can help with that journey!</span></h3>
+        <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .</h3>
+          <h3><strong>Spirit of EQ can help with that journey!</strong></h3>
 	</div> <!-- close the columns -->
      </div> <!-- close the row -->
     </div> <!-- close the container -->
 
     <div class="container">
-	<div class="panel panel-default">
+	<div class="panel panel-default" style="background-color: rgba(255, 255, 255, .75); border-radius: 10px">
 	<div class="panel-body">
      <div class="row">
         <div class="col-md-12">
@@ -112,7 +83,7 @@ img.bg {
           <p>Jim Vaive<br /><br />
 In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.</p>
           <p>Due to the company’s expertise and knowledge of the pest management industry, Jim has made appearances on radio and television to talk about how his industry affects your life. Jim’s work with complex jobs and effective problem solving ability has led to the company’s success. His key business focus is coordinating the right people for the most effective outcome. Jim is a member of the Columbus, Ohio and National Pest Control Associations. Among his other accomplishments are the following:            </p>
-          <ol>
+          <ul>
             <li>Has been involved with Karios Prison Ministry for 20 years working with the incarcerated from a spiritual and emotional perspective.</li>
             <li>Past board member of Karios Ohio</li>
             <li>Past board member of Karios USA </li>
@@ -131,12 +102,14 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
             <li>Is certified by “Deep Change” Cindy Wigglesworth SQ 21 Profile and coaches people regularly on their spiritual walk/journey</li>
             <li>Is an elder of Everyday People Ministries, a storefront mission.</li>
             <li>Has keen insight with regard to what drives people on the journey. </li>
-          </ol>
-          <br /><br />
+          </ul>
        	</div>
 	</div>
 	</div>
       	</div>
+
+	<div class="panel panel-default" style="background-color: rgba(255, 255, 255, .75); border-radius: 10px">
+	<div class="panel-body">
 	<div class="row">
         <div class="col-md-12">
           <a name="services"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Services</h2>
@@ -146,14 +119,15 @@ In addition to Jim Vaive’s work with spiritual and emotional intelligence, He 
           <p>B2B e-tailers and re-envisioneer innovatthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovative partnerships that evolve dot-com initiatives delivering synergistic earballs to incentivize B2B2C deliverables that leverage</p>
           
        <p>magnetic solutions to synergize clicks-and-mortar earballs while facilitating one-to-one action-items with revolutionary relationships that deliver viral markets and grow e-business supply-chains that expedite seamless relationships  and transform back-end relationships withthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovat </p>
-          <!--<p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>-->
-        </div> <!-- closes the columns  -->
-      </div>  <!-- closes the row -->
+	</div><!-- closes the columns  -->
+	</div><!-- closes the row -->
+        </div> <!-- closes panel body -->
+      </div>  <!-- closes panel -->
      
       <hr>
 
       <footer>
-        <p>&copy; Company 2014</p>
+        <p>&copy; Peter Barron 2014</p>
       </footer>
     </div> <!-- /container -->
 
