--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -64,12 +64,15 @@
     <!-- top div row -->
     <div class="container">
         <div class="row">
-            <div class="col-md-12">
-                <span class="pull-right"><img src="Images/spiritofeq_logo_med3.gif" class="img-responsive" hspace="20" vspace="10" /></span>
-		<h2>The Spirit of EQ Welcomes You!</h2>
+            <div class="col-sm-6 col-md-8">
+                <img src="Images/spiritofeq_logo_med3.gif" class="img-responsive visible-xs" style="margin-top: 20px;"/>
+                <h2>The Spirit of EQ Welcomes You!</h2>
                 <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .</h3>
                 <h3><strong>Spirit of EQ can help with that journey!</strong></h3>
             </div> <!-- close the columns -->
+            <div class="col-sm-6 col-md-4">
+                <img src="Images/spiritofeq_logo_med3.gif" class="img-responsive hidden-xs" style="margin-top: 40px;"/>
+            </div>
         </div> <!-- close the row -->
     </div> <!-- close the container -->
 
