--- a/index_old.html
+++ b/index_old.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <img src="images/RTN_BG_70.jpg" class="bg" />
+    <img src="images/RTN_BG_40.jpg" class="bg" />
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -64,15 +64,12 @@
     <!-- top div row -->
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-md-8">
-                <img src="Images/spiritofeq_logo_med3.gif" class="img-responsive visible-xs" style="margin-top: 20px;"/>
-                <h2>The Spirit of EQ Welcomes You!</h2>
+            <div class="col-md-12">
+                <span class="pull-right"><img src="Images/spiritofeq_logo_med3.gif" class="img-responsive" hspace="20" vspace="10" /></span>
+		<h2>The Spirit of EQ Welcomes You!</h2>
                 <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .</h3>
                 <h3><strong>Spirit of EQ can help with that journey!</strong></h3>
             </div> <!-- close the columns -->
-            <div class="col-sm-6 col-md-4">
-                <img src="Images/spiritofeq_logo_med3.gif" class="img-responsive hidden-xs" style="margin-top: 40px;"/>
-            </div>
         </div> <!-- close the row -->
     </div> <!-- close the container -->
 
@@ -81,7 +78,8 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Background</h2>
+                        <a name="background"></a>
+                        <img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Background</h2>
                         <p>
                             Jim Vaive<br /><br />
                             In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.
@@ -113,10 +111,10 @@
         </div>
 
         <div class="panel panel-default" style="background-color: rgba(255, 255, 255, .75); border-radius: 10px">
-	    <div class="panel-body">
+            <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-			<h2 id="services">Services</h2>
+                        <a name="services"></a><img src="Images/EQBtn.gif" alt="EQ Button" width="85" height="82" hspace="10" vspace="10" align="left"><h2>Services</h2>
                         <p>
                             Here we have a list of Individuals, Teams, Leaders, and Organizations:
                             through a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize
