creating all basic pages
Used the Background.html page to create all the other base pages so they
have one editable region for Matt to add content.  All other elements
(links, etc.) are working.

--- a/organizations.html
+++ b/organizations.html
@@ -68,32 +68,16 @@
             <div class="panel-body">
                 <div class="row">
                     <div class="col-md-12">
-                        <h2>Background</h2>
-                        <p>
-                            Jim Vaive<br /><br />
-                            In addition to Jim Vaive’s work with spiritual and emotional intelligence, He is President of Varment Guard Environmental Services Inc, Jim and his partners are leading their business to a steady 10% growth annually. Varment Guard specializes in pest management, wildlife removal & exclusion, termite inspections, and consulting, as well as handling large bird jobs throughout the country. Varment Guard is one of the largest privately held family pest management companies in Ohio, including the surrounding states and consistently wins awards for customer service and attention to detail. This success can be attributed to good integration of departments and smooth work flow.
-                        </p>
-                        <p>Due to the company’s expertise and knowledge of the pest management industry, Jim has made appearances on radio and television to talk about how his industry affects your life. Jim’s work with complex jobs and effective problem solving ability has led to the company’s success. His key business focus is coordinating the right people for the most effective outcome. Jim is a member of the Columbus, Ohio and National Pest Control Associations. Among his other accomplishments are the following:            </p>
-                        <ul>
-                            <li>Has been involved with Karios Prison Ministry for 20 years working with the incarcerated from a spiritual and emotional perspective.</li>
-                            <li>Past board member of Karios Ohio</li>
-                            <li>Past board member of Karios USA </li>
-                            <li>Past board member of RCI/LCI board of directors</li>
-                            <li>Has been in many prisons around the country</li>
-                            <li>Has been a board member of the Entrepreneurship Institute for 20 years</li>
-                            <li>Was a board member of haven of hope</li>
-                            <li>Is a certified lay speaker in the Methodist church </li>
-                            <li>Has completed Spiritual formation with Spiritual Formation Academy, Upper Room</li>
-                            <li>Has competed Spiritual Direction Training and sits with people on a regular basis</li>
-                            <li>Has held many leadership positions in the church and business</li>
-                            <li>Has been a past member of the board of directors for the National Pest Management Ass.</li>
-                            <li>Has led his company to over 20 years of growth</li>
-                            <li>Has a passion for running, walking and reading</li>
-                            <li>Is certified by “6 Seconds” EQ company and coaches people regularly on their emotional walk/journey </li>
-                            <li>Is certified by “Deep Change” Cindy Wigglesworth SQ 21 Profile and coaches people regularly on their spiritual walk/journey</li>
-                            <li>Is an elder of Everyday People Ministries, a storefront mission.</li>
-                            <li>Has keen insight with regard to what drives people on the journey. </li>
-                        </ul>
+                        <h2>Organizations</h2>
+                        <p>Here we have a list of Individuals, Teams, Leaders, and Organizations: through a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize
+
+B2B e-tailers and re-envisioneer innovatthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovative partnerships that evolve dot-com initiatives delivering synergistic earballs to incentivize B2B2C deliverables that leverage</p>
+
+<p>magnetic solutions to synergize clicks-and-mortar earballs while facilitating one-to-one action-items with revolutionary relationships that deliver viral markets and grow e-business supply-chains that expedite seamless relationships and transform back-end relationships withthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovat</p>
+
+<p>B2B e-tailers and re-envisioneer innovatthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovate and be an inside-out organization which facilitates sticky web-readiness transforming turnkey eyeballs to brand 24/365 paradigms with benchmark turnkey channels implementing viral e-services and dot-com action-items while we take that action item off-line and raise a red flag and remember touch base as you think about the red tape outside of the box and seize B2B e-tailers and re-envisioneer innovative partnerships that evolve dot-com initiatives delivering synergistic earballs to incentivize B2B2C deliverables that leverage</p>
+
+<p>magnetic solutions to synergize clicks-and-mortar earballs while facilitating one-to-one action-items with revolutionary relationships that deliver viral markets and grow e-business supply-chains that expedite seamless relationships and transform back-end relationships withthrough a top-down, proactive approach we can remain customer focused and goal-directed, innovat </p>
                     </div>
                 </div>
             </div>
