--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 </head>
 
 <body>
-    <img src="images/RTN_BG_70.jpg" class="bg" />
+    <img src="images/RTN_BG_Full.jpg" class="bg" />
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -46,6 +46,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Members<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="services.html">Services</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="individuals.html">Individuals</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="teams.html">Teams/Groups</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="leaders.html">Leaders</a></li>
@@ -67,7 +68,7 @@
             <div class="col-sm-6 col-md-8">
                 <img src="Images/spiritofeq_logo_med4.gif" class="img-responsive visible-xs" style="margin-top: 20px;"/>
                 <h2>The Spirit of EQ Welcomes You!</h2>
-                <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there. . .</h3>
+                <h3>What is driving your personal and/or professional life? Do you know your destination? If you don’t know where you are going or how to make the trip, you may not get there.</h3>
                 <h3><strong>Spirit of EQ can help with that journey!</strong></h3>
             </div> <!-- close the columns -->
             <div class="col-sm-6 col-md-4">
@@ -76,7 +77,7 @@
         </div> <!-- close the row -->
     </div> <!-- close the container -->
 
-    <div class="container">
+    <!--<div class="container">
         <div class="panel panel-default" style="background-color: rgba(255, 255, 255, .75); border-radius: 10px">
 	    <div class="panel-body">
                 <div class="row">
@@ -99,9 +100,9 @@
             </div> <!-- closes panel body -->
         </div>  <!-- closes panel -->
 
-        <hr>
+        <!--<hr>-->
 
-        <footer>
+        <!--<footer>
             <p>&copy; Peter Barron 2014</p>
         </footer>
     </div> <!-- /container -->
