--- a/resources.html
+++ b/resources.html
@@ -46,6 +46,7 @@
                     <li class="dropdown">
                         <a class="dropdown-toggle" data-toggle="dropdown" href="#">Members<span class="caret"></span></a>
                         <ul class="dropdown-menu" role="menu">
+                            <li role="presentation"><a role="menuitem" tabindex="-1" href="services.html">Services</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="individuals.html">Individuals</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="teams.html">Teams/Groups</a></li>
                             <li role="presentation"><a role="menuitem" tabindex="-1" href="leaders.html">Leaders</a></li>
